# spider

./: .env.example  .gitignore  .vault_pass_example  README.md  docker-compose.yml  drizzle.config.ts  justfile  package.json  pnpm-lock.yaml
.husky/: pre-commit
api/: package.json  pnpm-lock.yaml  tsconfig.json
api/drizzle/: 0000_lucky_fat_cobra.sql  0000_useful_midnight.sql
api/drizzle/meta/: 0000_snapshot.json  _journal.json
api/src/: index.ts  middleware.ts  migrate.ts  redis.ts  seed.ts
api/src/db/: index.ts  migrate.ts  schema.ts
api/src/routes/: admin.ts  auth.ts  index.ts  search.ts  test.ts
crawler/: .gitignore  Cargo.toml
crawler/src/: main.odin  main.rs
deployment/: .env.j2  Caddyfile  Dockerfile.api  Dockerfile.web  deploy.yml  docker-compose.yaml  inventory.ini
deployment/group_vars/production/: vault.yml
scripts/: check-env.sh
web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  AuthContext.tsx  main.tsx
web/src/api/: api_paths.ts  index.ts
web/src/pages/: admin.tsx  login.tsx  search.tsx
