[package]
name = "spider-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12" }
scraper = "0.20"
redis = { version = "0.27", features = ["tokio-comp"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
